--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -14,85 +14,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title=" ">
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white">
     </androidx.appcompat.widget.Toolbar>
 
-    <ScrollView
-        android:layout_width="402dp"
-        android:layout_height="617dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/albumImage1"
-                    android:layout_width="300px"
-                    android:layout_height="350px"
-                    android:layout_margin="10dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/pigcha1"
-                    android:visibility="visible" />
-
-                <ImageView
-                    android:id="@+id/albumImage2"
-                    android:layout_width="300px"
-                    android:layout_height="350px"
-                    android:layout_margin="10dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/pigcha2"
-                    android:visibility="invisible" />
-
-                <ImageView
-                    android:id="@+id/albumImage3"
-                    android:layout_width="300px"
-                    android:layout_height="350px"
-                    android:layout_margin="10dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/pigcha3"
-                    android:visibility="invisible" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/albumImage4"
-                    android:layout_width="300px"
-                    android:layout_height="350px"
-                    android:layout_margin="10dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/pigcha4"
-                    android:visibility="invisible" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal" />
-            </LinearLayout>
-
-
-</ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
