--- a/app/src/main/res/layout/album_dialog.xml
+++ b/app/src/main/res/layout/album_dialog.xml
@@ -8,6 +8,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dial_album"/>
+        android:id="@+id/albumImage2"/>
 
 </LinearLayout>
