--- a/app/src/main/res/layout/fragment_closing.xml
+++ b/app/src/main/res/layout/fragment_closing.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
-                android:text="이번 달 목표 지출액을 입력하세요 "
+                android:text="이번 달 지출예산을 입력하세요 "
                 android:textSize="20dp"/>
 
             <LinearLayout
